--- a/style.css
+++ b/style.css
@@ -311,7 +311,13 @@ body{
 	font-size: 15px;
 	position: relative;
 	overflow: hidden;
+	z-index: 999;
+	transition: .5s;
+	border: none;
 	
+}
+.regular-btn a:hover{
+	color: black;
 }
 
 .regular-btn a::before{
@@ -320,12 +326,12 @@ body{
 	top: 50%;
 	left: 50%;
 	background: white;
-	color: rgb(0, 0, 0) !important;
+	
 	width: 100%;
 	height: 0%;
 	transition: all .5s ease;
 	transform: translate(-50%,-50%);
-	z-index: 1;
+	z-index: -1;
 	
 	
 	/* border: 1px 0px solid #a90101; */
@@ -333,7 +339,7 @@ body{
 	
 }
 .regular-btn a:hover::before{
-	height:94%;
+	height:100%;
 	/* color: black; */
 	
 
@@ -354,13 +360,17 @@ body{
 }
 .primary-btn a{
 	text-decoration: none;
-	color: white;
+	color: rgb(255, 255, 255);
 	background: black;
 	padding: 10px 30px;
 	font-weight: bold;
 	font-size: 15px;
 	position: relative;
+	z-index: 999;
 	letter-spacing: 1px;
+}
+.primary-btn a:hover{
+	color: black;
 }
 
 .primary-btn a::before{
@@ -372,13 +382,14 @@ body{
 	color: black !important;
 	width: 100%;
 	height: 0%;
+	z-index: -1;
 	transition: all .5s ease;
 	transform: translate(-50%,-50%);
 	
 	
 }
 .primary-btn a:hover::before{
-	height:94%;
+	height:95%;
 	
 
 }
