--- a/style.css
+++ b/style.css
@@ -311,13 +311,7 @@ body{
 	font-size: 15px;
 	position: relative;
 	overflow: hidden;
-	z-index: 999;
-	transition: .5s;
-	border: none;
 	
-}
-.regular-btn a:hover{
-	color: black;
 }
 
 .regular-btn a::before{
@@ -326,12 +320,12 @@ body{
 	top: 50%;
 	left: 50%;
 	background: white;
-	
+	color: rgb(0, 0, 0) !important;
 	width: 100%;
 	height: 0%;
 	transition: all .5s ease;
 	transform: translate(-50%,-50%);
-	z-index: -1;
+	z-index: 1;
 	
 	
 	/* border: 1px 0px solid #a90101; */
@@ -339,7 +333,7 @@ body{
 	
 }
 .regular-btn a:hover::before{
-	height:100%;
+	height:94%;
 	/* color: black; */
 	
 
@@ -360,17 +354,13 @@ body{
 }
 .primary-btn a{
 	text-decoration: none;
-	color: rgb(255, 255, 255);
+	color: white;
 	background: black;
 	padding: 10px 30px;
 	font-weight: bold;
 	font-size: 15px;
 	position: relative;
-	z-index: 999;
 	letter-spacing: 1px;
-}
-.primary-btn a:hover{
-	color: black;
 }
 
 .primary-btn a::before{
@@ -382,14 +372,13 @@ body{
 	color: black !important;
 	width: 100%;
 	height: 0%;
-	z-index: -1;
 	transition: all .5s ease;
 	transform: translate(-50%,-50%);
 	
 	
 }
 .primary-btn a:hover::before{
-	height:95%;
+	height:94%;
 	
 
 }
